Change systemrdl to follow 1.22 syntax

--- a/global_controller/systemRDL/rdl_models/glc.rdl
+++ b/global_controller/systemRDL/rdl_models/glc.rdl
@@ -179,7 +179,7 @@ addrmap glc {
                 'data_strm_cgra_to_glb', and 'parallel_config_glb_to_cgra'";
 
         default nonsticky intr;
-		default hw = na;
+		default hw = w;
         default sw = r; // Software can just read this. It clears the block interrupt to
 
         field { 
